# draw

./: .boilerplate.txt  .clang-format  .clang-tidy  .codacy.yaml  .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  REUSE.toml  font.py  main.cpp  sans.cpp  sans.hpp
.github/workflows/: cmake-multi-platform.yml  codacy.yaml  codecov.yaml  codeql.yml  msvc.yaml
demo/: CMakeLists.txt  all_chars.cpp  curses-count.cpp  curses_count.cpp  curses_rect.cpp  curses_rect_compare.py  expected.json  main.cpp  time.cpp
include/draw/: all_fonts.hpp  bitmap.hpp  bitmap32.hpp  font.hpp  glyph_cache.hpp  icubaby.hpp  iumap.hpp  plru_cache.hpp  text.hpp  tracer.hpp  types.hpp  uinteger.hpp
lib/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  bitmap32.cpp  font.cpp  font.hpp  glyph_cache.cpp  glyph_cache.hpp  plru_cache.hpp  types.hpp
lib/font/: CMakeLists.txt  font.py  png.py
lib/font/sans_font/16/: basic_latin-0040-004F.xcf  basic_latin-0060-006F.xcf  latin1-00B0-00BF.xcf  latin1-00D0-00DF.xcf  latin1-00E0-00EF.xcf  sans16.json
lib/font/sans_font/32/: basic_latin-0030-003F.xcf  basic_latin-0050-005F.xcf  basic_latin-0060-006F.xcf  basic_latin-0070-007F.xcf  sans32.json
sans_font/: basic_latin-0020-002F.xcf  basic_latin-0030-003F.xcf  basic_latin-0050-005F.xcf  basic_latin-0070-007F.xcf  latin1-00A0-00AF.xcf  latin1-00C0-00CF.xcf  latin1-00F0-00FF.xcf  replacement-FFFD.xcf  sans.json  white-square-25A1.xcf
sans_font/16/: basic_latin-0000-000F.xcf  sans16.json
sans_font/32/: basic_latin-0020-002F.xcf  basic_latin-0030-003F.xcf  basic_latin-0040-004F.xcf  basic_latin-0050-005F.xcf  basic_latin-0070-007F.xcf  sans32.json
unit_tests/: CMakeLists.txt  create_bitmap.cpp  create_bitmap.hpp  rect.hpp  test_copy.cpp  test_draw_char.cpp  test_font.cpp  test_frame_rect.cpp  test_iumap.cpp  test_line.cpp  test_line32.cpp  test_paint_rect.cpp  test_plru_cache.cpp  test_rect.cpp  test_rgba.cpp  test_text.cpp
